# mujoco_go2

./: CMakeLists.txt  README.md  architecture.mm.md  main.cpp  user_func.cpp  user_func.h
config/: backend.json  bitbot_quadruped_go2.xml  go2_para.yaml
include/: BallanceController.h  ClassManager.h  Dynamic.h  Dynamic_arm.h  EEF.h  FiniteStateMachine.h  HoQp.h  Info.h  MPC_solver.h  MujocoInterface.h  NMPC_solver.h  NMPC_solver_DRBM.h  NMPC_solver_DRBM_rpy.h  NMPC_solver_rpy.h  ObjectController.h  Robot_Parameters.h  SaveLog.h  StateEstimator.h  SwingLegController.h  Task.h  TrajectoryGenerator.h  UserCmd.h  WholeBodyController.h  WholeBodyController_arm.h  WholeBodyPlanner.h  common.h  test.h
models/go2/meshes/: base.stl  calf.stl  calf_mirror.stl  foot.stl  hip.stl  thigh.stl  thigh_mirror.stl
models/go2/mujoco/: go2.xml
models/go2/urdf/: go2.urdf
scripts/: pyside6test.py
src/: BallanceController.cpp  ClassManager.cpp  Dynamic.cpp  Dynamic_arm.cpp  EEF.cpp  FiniteStateMachine.cpp  HoQp.cpp  Info.cpp  MPC_solver.cpp  MujocoInterface.cpp  NMPC_solver.cpp  NMPC_solver_DRBM.cpp  NMPC_solver_DRBM_rpy.cpp  NMPC_solver_rpy.cpp  ObjectController.cpp  Robot_Parameters.cpp  SaveLog.cpp  StateEstimator.cpp  SwingLegController.cpp  TrajectoryGenerator.cpp  UserCmd.cpp  WholeBodyController.cpp  WholeBodyController_arm.cpp  WholeBodyPlanner.cpp  common.cpp  main.cpp  test.cpp
